<resources>
    <string name="app_name">Minimalist Note Saver</string>
    <string name="unsavedNote">UnsavedNotePref</string>
    <string name="type_here">Type here…</string>
    <string name="enter_note_name">Enter Note Name:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="create_a_new_note">Create a new note.</string>
    <string name="delete">Delete</string>
    <string name="export">Export</string>
    <string name="add_note">Add Note</string>
    <string name="save_note">Save Note</string>
    <string name="copy_text">Copy Text</string>
    <string name="share">Share</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="progress">Progress</string>
    <string name="file_deleted">Files Deleted: %1$d out of %2$d</string>
    <string name="file_exported">File Exported: %1$d out of %2$d</string>
    <string name="close">Close</string>
    <string name="mail_feedback_email">durvankd83@gmail.com</string>
    <string name="mail_feedback_subject">Feedback on Minimalist Note Saver</string>
    <string name="mail_feedback_message">Enter Your Feedback Here:</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about">About</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="version">Version: %1$s</string>
    <string name="app_logo">App Logo</string>
    <string name="send_feedback">Send Feedback</string>
</resources>
