<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--  Toolbar ActionMode Menu Items  -->

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

    <item
        android:icon="@drawable/ic_export"
        android:title="@string/share"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_copy_text"
                android:title="@string/copy_text"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_export"
                android:title="@string/export"
                app:showAsAction="never" />
        </menu>
    </item>

    <item
        android:id="@+id/all_selection"
        android:title="@string/select_all"
        app:showAsAction="never" />
</menu>