<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/layoutBackground"
    tools:context=".About">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_logo"
            android:scaleType="centerCrop"
            android:src="@drawable/app_icon" />

        <TextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorBackground" />

        <TextView
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/mail_feedback_email"
            android:textColor="@color/colorBackground" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/colorBackground"
            app:cardCornerRadius="4dp"
            app:contentPadding="16dp">

            <TextView
                android:id="@+id/appVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/gotoTNC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/colorBackground"
            app:cardCornerRadius="4dp"
            app:contentPadding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_conditions"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/gotoPrPc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/colorBackground"
            app:cardCornerRadius="4dp"
            app:contentPadding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/sendFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorBackground"
            app:cardCornerRadius="4dp"
            app:contentPadding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_feedback"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>