<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="16dp">

    <EditText
        android:id="@+id/noteName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/custom_background"
        android:hint="@string/enter_note_name"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions"
        android:padding="5dp"
        android:textColor="@android:color/white"
        android:textCursorDrawable="@drawable/cursor_drawable" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/noteName"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/cancelNote"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/saveNote"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/save" />
    </LinearLayout>
</RelativeLayout>